_generated-doc/2.2/config/quarkus-log-sentry-logging-sentry-sentry-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-log-sentry-logging-sentry-sentry-config_configuration]]link:#quarkus-log-sentry-logging-sentry-sentry-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-log-sentry-logging-sentry-sentry-config_quarkus.log.sentry]]`link:#quarkus-log-sentry-logging-sentry-sentry-config_quarkus.log.sentry[quarkus.log.sentry]`

[.description]
--
Determine whether to enable the Sentry logging extension.
--|boolean 
|`false`


a| [[quarkus-log-sentry-logging-sentry-sentry-config_quarkus.log.sentry.dsn]]`link:#quarkus-log-sentry-logging-sentry-sentry-config_quarkus.log.sentry.dsn[quarkus.log.sentry.dsn]`

[.description]
--
Sentry DSN The DSN is the first and most important thing to configure because it tells the SDK where to send events. You can find your project’s DSN in the “Client Keys” section of your “Project Settings” in Sentry.
--|string 
|


a| [[quarkus-log-sentry-logging-sentry-sentry-config_quarkus.log.sentry.level]]`link:#quarkus-log-sentry-logging-sentry-sentry-config_quarkus.log.sentry.level[quarkus.log.sentry.level]`

[.description]
--
The sentry log level.
--|link:https://docs.jboss.org/jbossas/javadoc/7.1.2.Final/org/jboss/logmanager/Level.html[Level]
 
|`WARN`


a| [[quarkus-log-sentry-logging-sentry-sentry-config_quarkus.log.sentry.minimum-event-level]]`link:#quarkus-log-sentry-logging-sentry-sentry-config_quarkus.log.sentry.minimum-event-level[quarkus.log.sentry.minimum-event-level]`

[.description]
--
The minimum event level. Every log statement that is greater than minimum event level is turned into Sentry event.
--|link:https://docs.jboss.org/jbossas/javadoc/7.1.2.Final/org/jboss/logmanager/Level.html[Level]
 
|`WARN`


a| [[quarkus-log-sentry-logging-sentry-sentry-config_quarkus.log.sentry.minimum-breadcrumb-level]]`link:#quarkus-log-sentry-logging-sentry-sentry-config_quarkus.log.sentry.minimum-breadcrumb-level[quarkus.log.sentry.minimum-breadcrumb-level]`

[.description]
--
The minimum breadcrumb level. Every log statement that is greater than minimum breadcrumb level is added to Sentry scope as a breadcrumb, which can be later attached to SentryEvent if one is triggered.
--|link:https://docs.jboss.org/jbossas/javadoc/7.1.2.Final/org/jboss/logmanager/Level.html[Level]
 
|`INFO`


a| [[quarkus-log-sentry-logging-sentry-sentry-config_quarkus.log.sentry.in-app-packages]]`link:#quarkus-log-sentry-logging-sentry-sentry-config_quarkus.log.sentry.in-app-packages[quarkus.log.sentry.in-app-packages]`

[.description]
--
Sentry differentiates stack frames that are directly related to your application (“in application”) from stack frames that come from other packages such as the standard library, frameworks, or other dependencies. The difference is visible in the Sentry web interface where only the “in application” frames are displayed by default. You can configure which package prefixes your application uses with this option. This option is highly recommended as it affects stacktrace grouping and display on Sentry. See documentation: https://quarkus.io/guides/logging-sentry++#++in-app-packages
--|list of string 
|


a| [[quarkus-log-sentry-logging-sentry-sentry-config_quarkus.log.sentry.environment]]`link:#quarkus-log-sentry-logging-sentry-sentry-config_quarkus.log.sentry.environment[quarkus.log.sentry.environment]`

[.description]
--
Environment With Sentry you can easily filter issues, releases, and user feedback by environment. The environment filter on sentry affects all issue-related metrics like count of users affected, times series graphs, and event count. By setting the environment option, an environment tag will be added to each new issue sent to Sentry. There are a few restrictions: -> the environment name cannot contain newlines or spaces, cannot be the string “None” or exceed 64 characters.
--|string 
|


a| [[quarkus-log-sentry-logging-sentry-sentry-config_quarkus.log.sentry.release]]`link:#quarkus-log-sentry-logging-sentry-sentry-config_quarkus.log.sentry.release[quarkus.log.sentry.release]`

[.description]
--
Release A release is a version of your code that is deployed to an environment. When you give Sentry information about your releases, you unlock a number of new features: - Determine the issues and regressions introduced in a new release - Predict which commit caused an issue and who is likely responsible - Resolve issues by including the issue number in your commit message - Receive email notifications when your code gets deployed
--|string 
|


a| [[quarkus-log-sentry-logging-sentry-sentry-config_quarkus.log.sentry.server-name]]`link:#quarkus-log-sentry-logging-sentry-sentry-config_quarkus.log.sentry.server-name[quarkus.log.sentry.server-name]`

[.description]
--
Server name Sets the server name that will be sent with each event.
--|string 
|


a| [[quarkus-log-sentry-logging-sentry-sentry-config_quarkus.log.sentry.debug]]`link:#quarkus-log-sentry-logging-sentry-sentry-config_quarkus.log.sentry.debug[quarkus.log.sentry.debug]`

[.description]
--
Debug Enables Sentry debug mode.
--|boolean 
|`false`

|===